[package]
name = "dex-data-realtime-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9"
serde = "1"
serde_json = "1"
serde_derive = "1"
cron = "0.12"
reqwest = {version = "0.11.22", features = ["json", "serde_json", "native-tls"]}
redis = { version = "0.23.3", features = ["tokio-comp"] }
postgrest = "1.6.0"

dotenv = "0.15"
num-traits = "0.2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
futures = "0.3.28"

anyhow = "1.0"
async-trait = "0.1"
solana-client = "1.17.6"
solana-sdk = "1.17.6"
solana-account-decoder = "1.17.6"
yellowstone-grpc-client = { git = "https://github.com/rpcpool/yellowstone-grpc.git" }
yellowstone-grpc-proto = { git = "https://github.com/rpcpool/yellowstone-grpc.git" }
anchor-lang = "0.27.0"
arrayref = "0.3.6"
bs58 = "0.5.0"
bytemuck = { version = "1.4.0" }
num_enum = "0.6.1"
openbook_dex = "0.5.6"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres", "chrono", "decimal", "offline" ] }